--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipts.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipts.resx
@@ -21,4 +21,16 @@
     <data name="_Receipts" xml:space="preserve">
         <value>Paragony</value>
     </data>
+    <data name="Id" xml:space="preserve">
+        <value>Id</value>
+    </data>
+    <data name="Store" xml:space="preserve">
+        <value>Sklep</value>
+    </data>
+    <data name="PurchaseDate" xml:space="preserve">
+        <value>Data zakupu</value>
+    </data>
+    <data name="TotalCost" xml:space="preserve">
+        <value>Koszt całkowity</value>
+    </data>
 </root>
