--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipts.en-us.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipts.en-us.resx
@@ -41,4 +41,10 @@
     <data name="Search" xml:space="preserve">
         <value>Search</value>
     </data>
+    <data name="PagingSummaryTemplate" xml:space="preserve">
+        <value>Displaying page{0} of {1} &lt;b&gt;(total {2} records)&lt;/b&gt;</value>
+    </data>
+    <data name="PageSizeText" xml:space="preserve">
+        <value>items per page</value>
+    </data>
 </root>
