Enhance dropdown filters with chips and selected items text

--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipts.en-us.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipts.en-us.resx
@@ -47,4 +47,7 @@
     <data name="PageSizeText" xml:space="preserve">
         <value>items per page</value>
     </data>
+    <data name="SelectedItemsText" xml:space="preserve">
+        <value>selected items</value>
+    </data>
 </root>
