--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipts.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipts.resx
@@ -54,4 +54,7 @@
     <data name="PageSizeText" xml:space="preserve">
         <value>wierszy na stronę</value>
     </data>
+    <data name="SelectedItemsText" xml:space="preserve">
+        <value>wybranych wierszy</value>
+    </data>
 </root>
