"Add a 'New Receipt' button to the Receipts page with localization support"

--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipts.en-us.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipts.en-us.resx
@@ -50,4 +50,7 @@
     <data name="SelectedItemsText" xml:space="preserve">
         <value>selected items</value>
     </data>
+    <data name="NewReceipt" xml:space="preserve">
+        <value>New receipt</value>
+    </data>
 </root>
