Add purchase management functionality to Receipt page

--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipt.en-us.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipt.en-us.resx
@@ -44,4 +44,7 @@
     <data name="Description" xml:space="preserve">
         <value>Description</value>
     </data>
+    <data name="AddItem" xml:space="preserve">
+        <value>Add item</value>
+    </data>
 </root>
