--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipt.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipt.resx
@@ -51,4 +51,7 @@
     <data name="Description" xml:space="preserve">
         <value>Opis</value>
     </data>
+    <data name="AddItem" xml:space="preserve">
+        <value>Dodaj przedmiot</value>
+    </data>
 </root>
