Update column title from "TotalPrice" to "FinalPrice" and add localization.

--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipt.en-us.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipt.en-us.resx
@@ -47,4 +47,7 @@
     <data name="AddItem" xml:space="preserve">
         <value>Add item</value>
     </data>
+    <data name="FinalPrice" xml:space="preserve">
+        <value>Final price</value>
+    </data>
 </root>
