--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipt.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipt.resx
@@ -54,4 +54,7 @@
     <data name="AddItem" xml:space="preserve">
         <value>Dodaj przedmiot</value>
     </data>
+    <data name="FinalPrice" xml:space="preserve">
+        <value>Cena końcowa</value>
+    </data>
 </root>
