--- a/src/ExpenseExplorer.WebApp/Resources/SharedResources.en-us.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/SharedResources.en-us.resx
@@ -23,4 +23,16 @@
     <data name="Confirm" xml:space="preserve">
         <value>Confirm</value>
     </data>
+    <data name="From" xml:space="preserve">
+        <value>From</value>
+    </data>
+    <data name="To" xml:space="preserve">
+        <value>To</value>
+    </data>
+    <data name="Min" xml:space="preserve">
+        <value>Min</value>
+    </data>
+    <data name="Max" xml:space="preserve">
+        <value>Max</value>
+    </data>
 </root>
