Add error messages for receipt validation and update toast localization

--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/NewReceipt.en-us.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/NewReceipt.en-us.resx
@@ -23,4 +23,13 @@
     <data name="Cancel" xml:space="preserve">
         <value>Cancel</value>
     </data>
+    <data name="EMPTY_STORE_NAME" xml:space="preserve">
+    <value>Store name cannot be empty.</value>
+  </data>
+    <data name="PURCHASE_DATE_IN_FUTURE" xml:space="preserve">
+    <value>Purchase date cannot be in the future.</value>
+  </data>
+    <data name="INVALID_PURCHASE_DATE" xml:space="preserve">
+    <value>Invalid purchase date.</value>
+  </data>
 </root>
