Standardize `PurchaseDate` localization key to `Purchase date`.

--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/NewReceipt.en-us.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/NewReceipt.en-us.resx
@@ -14,7 +14,7 @@
     <data name="Store" xml:space="preserve">
         <value>Store</value>
     </data>
-    <data name="PurchaseDate" xml:space="preserve">
+    <data name="Purchase date" xml:space="preserve">
         <value>Purchase date</value>
     </data>
     <data name="Save" xml:space="preserve">
