--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/NewReceipt.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/NewReceipt.resx
@@ -21,7 +21,7 @@
     <data name="Store" xml:space="preserve">
         <value>Sklep</value>
     </data>
-    <data name="PurchaseDate" xml:space="preserve">
+    <data name="Purchase date" xml:space="preserve">
         <value>Data zakupu</value>
     </data>
     <data name="Save" xml:space="preserve">
