Standardize localization keys for page titles across components and resource files.

--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/NewReceipt.en-us.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/NewReceipt.en-us.resx
@@ -32,4 +32,7 @@
     <data name="INVALID_PURCHASE_DATE" xml:space="preserve">
     <value>Invalid purchase date.</value>
   </data>
+    <data name="_Title" xml:space="preserve">
+        <value>New receipt</value>
+    </data>
 </root>
