--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/NewReceipt.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/NewReceipt.resx
@@ -39,4 +39,7 @@
     <data name="INVALID_PURCHASE_DATE" xml:space="preserve">
     <value>Nieprawidłowa data zakupu.</value>
   </data>
+    <data name="_Title" xml:space="preserve">
+        <value>Nowy paragon</value>
+    </data>
 </root>
