Add localization for empty store name and purchase date validation errors.

--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipt.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipt.resx
@@ -78,4 +78,13 @@
     <data name="INVALID_RECEIPT_ITEM_ID" xml:space="preserve">
         <value>Nieprawidłowe id pozycji paragonu.</value>
     </data>
+    <data name="EMPTY_STORE_NAME" xml:space="preserve">
+      <value>Nazwa sklepu nie może być pusta.</value>
+    </data>
+    <data name="PURCHASE_DATE_IN_FUTURE" xml:space="preserve">
+      <value>Data zakupu nie może być w przyszłości.</value>
+    </data>
+    <data name="INVALID_PURCHASE_DATE" xml:space="preserve">
+      <value>Nieprawidłowa data zakupu.</value>
+    </data>
 </root>
