Add localization for empty receipt items message in Receipt resources.

--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipt.en-us.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipt.en-us.resx
@@ -80,4 +80,7 @@
     <data name="INVALID_PURCHASE_DATE" xml:space="preserve">
         <value>Invalid purchase date.</value>
     </data>
+    <data name="No receipt items to display" xml:space="preserve">
+        <value>No receipt items to display</value>
+    </data>
 </root>
