--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipt.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipt.resx
@@ -87,4 +87,7 @@
     <data name="INVALID_PURCHASE_DATE" xml:space="preserve">
       <value>Nieprawidłowa data zakupu.</value>
     </data>
+    <data name="No receipt items to display" xml:space="preserve">
+        <value>Brak przedmiotów do wyświetlenia</value>
+    </data>
 </root>
