--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipts.en-us.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Receipts.en-us.resx
@@ -53,4 +53,13 @@
     <data name="No receipts to display" xml:space="preserve">
         <value>No receipts to display</value>
     </data>
+    <data name="INVALID_RECEIPT_ID" xml:space="preserve">
+        <value>Invalid receipt id.</value>
+    </data>
+    <data name="PURCHASE_DATE_IN_FUTURE" xml:space="preserve">
+        <value>Purchase date cannot be in the future.</value>
+    </data>
+    <data name="INVALID_PURCHASE_DATE" xml:space="preserve">
+        <value>Invalid purchase date.</value>
+    </data>
 </root>
