Add localization for `DB_EXCEPTION` and `RECEIPT_NOT_FOUND` messages across resources.

--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/NewReceipt.en-us.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/NewReceipt.en-us.resx
@@ -35,4 +35,7 @@
     <data name="_Title" xml:space="preserve">
         <value>New receipt</value>
     </data>
+    <data name="DB_EXCEPTION" xml:space="preserve">
+        <value>An unexpected error has occurred.</value>
+    </data>
 </root>
