--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/ReceiptItems.en-us.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/ReceiptItems.en-us.resx
@@ -47,4 +47,10 @@
     <data name="Description" xml:space="preserve">
     <value>Description</value>
   </data>
+  <data name="DB_EXCEPTION" xml:space="preserve">
+    <value>An unexpected error has occurred.</value>
+  </data>
+  <data name="RECEIPT_NOT_FOUND" xml:space="preserve">
+    <value>Receipt not found.</value>
+  </data>
 </root>
