--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/ReceiptItems.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/ReceiptItems.resx
@@ -59,4 +59,10 @@
     <data name="Description" xml:space="preserve">
     <value>Opis</value>
   </data>
+  <data name="DB_EXCEPTION" xml:space="preserve">
+    <value>Wystąpił nieoczekiwany błąd.</value>
+  </data>
+  <data name="RECEIPT_NOT_FOUND" xml:space="preserve">
+    <value>Nie znaleziono paragonu.</value>
+  </data>
 </root>
