Add `Reports` menu item and localization

--- a/src/ExpenseExplorer.WebApp/Resources/Components/Layout/NavMenu.en-us.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Layout/NavMenu.en-us.resx
@@ -17,4 +17,7 @@
     <data name="Receipt items" xml:space="preserve">
         <value>Receipt items</value>
     </data>
+    <data name="Reports" xml:space="preserve">
+        <value>Reports</value>
+    </data>
 </root>
