Display "All" label in reports and adjust layout for filters

--- a/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Reports.en-US.resx
+++ b/src/ExpenseExplorer.WebApp/Resources/Components/Pages/Reports.en-US.resx
@@ -23,4 +23,7 @@
     <data name="No data to display" xml:space="preserve">
         <value>No data to display</value>
     </data>
+    <data name="All" xml:space="preserve">
+        <value>All</value>
+    </data>
 </root>
